compiler/parser/tests/snapshots/snapshots__for_loop.snap
---
source: compiler/parser/tests/snapshots.rs
assertion_line: 24
expression: program
---
statements:
  - For:
      variable:
        name: i
        span:
          start: 4
          end: 5
      iterable:
        Range:
          start:
            Literal:
              kind:
                Int: 0
              span:
                start: 9
                end: 10
          end:
            Literal:
              kind:
                Int: 10
              span:
                start: 12
                end: 14
          span:
            start: 9
            end: 14
      body:
        statements:
          - Expression:
              expr:
                MethodChain:
                  base: Screen
                  chain:
                    - method:
                        name: layer
                        span:
                          start: 17
                          end: 25
                      args:
                        - Literal:
                            kind:
                              Int: 0
                            span:
                              start: 17
                              end: 25
                      span:
                        start: 17
                        end: 25
                    - method:
                        name: print
                        span:
                          start: 17
                          end: 25
                      args:
                        - Identifier:
                            name: i
                            span:
                              start: 23
                              end: 24
                      span:
                        start: 17
                        end: 25
                  span:
                    start: 17
                    end: 25
              span:
                start: 17
                end: 25
        span:
          start: 15
          end: 27
      span:
        start: 0
        end: 27
span:
  start: 0
  end: 27
