compiler/parser/tests/snapshots/snapshots__function_decl.snap
---
source: compiler/parser/tests/snapshots.rs
expression: program
---
statements:
  - Function:
      name:
        name: add
        span:
          start: 4
          end: 7
      params:
        - name:
            name: a
            span:
              start: 8
              end: 9
          type_ann: Int
          span:
            start: 8
            end: 14
        - name:
            name: b
            span:
              start: 16
              end: 17
          type_ann: Int
          span:
            start: 16
            end: 22
      return_type: Int
      body:
        statements:
          - Return:
              value:
                BinaryOp:
                  left:
                    Identifier:
                      name: a
                      span:
                        start: 40
                        end: 41
                  op: Add
                  right:
                    Identifier:
                      name: b
                      span:
                        start: 44
                        end: 45
                  span:
                    start: 40
                    end: 45
              span:
                start: 33
                end: 45
        span:
          start: 31
          end: 47
      span:
        start: 0
        end: 47
span:
  start: 0
  end: 47
