compiler/parser/tests/snapshots/snapshots__match_stmt.snap
---
source: compiler/parser/tests/snapshots.rs
assertion_line: 30
expression: program
---
statements:
  - Match:
      subject:
        Identifier:
          name: x
          span:
            start: 6
            end: 7
      arms:
        - pattern:
            Literal:
              kind:
                Int: 1
              span:
                start: 10
                end: 11
          body:
            statements:
              - Expression:
                  expr:
                    MethodChain:
                      base: Screen
                      chain:
                        - method:
                            name: layer
                            span:
                              start: 17
                              end: 29
                          args:
                            - Literal:
                                kind:
                                  Int: 0
                                span:
                                  start: 17
                                  end: 29
                          span:
                            start: 17
                            end: 29
                        - method:
                            name: print
                            span:
                              start: 17
                              end: 29
                          args:
                            - Literal:
                                kind:
                                  String: one
                                span:
                                  start: 23
                                  end: 28
                          span:
                            start: 17
                            end: 29
                      span:
                        start: 17
                        end: 29
                  span:
                    start: 17
                    end: 29
            span:
              start: 15
              end: 31
          span:
            start: 15
            end: 31
        - pattern:
            Wildcard:
              start: 32
              end: 33
          body:
            statements:
              - Expression:
                  expr:
                    MethodChain:
                      base: Screen
                      chain:
                        - method:
                            name: layer
                            span:
                              start: 39
                              end: 53
                          args:
                            - Literal:
                                kind:
                                  Int: 0
                                span:
                                  start: 39
                                  end: 53
                          span:
                            start: 39
                            end: 53
                        - method:
                            name: print
                            span:
                              start: 39
                              end: 53
                          args:
                            - Literal:
                                kind:
                                  String: other
                                span:
                                  start: 45
                                  end: 52
                          span:
                            start: 39
                            end: 53
                      span:
                        start: 39
                        end: 53
                  span:
                    start: 39
                    end: 53
            span:
              start: 37
              end: 55
          span:
            start: 37
            end: 55
      span:
        start: 0
        end: 57
span:
  start: 0
  end: 57
